[package]
name = "grove"
version = "0.1.0"
authors = ["Noam Ta Shma noam.tashma@gmail.com"]
edition = "2018"
keywords = ["interval", "segment", "tree", "BST"]
categories = ["data-structures", "algorithms"]
repository = "https://github.com/noamtashma/grove"
description = "A segment tree library enabling generic user-defined queries and actions on segments of your data."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_destructure = "1.0.0"
void = "1.0"
rand = "0.8"
recursive_reference = {version = "0.*", path = "../recursive_reference" }
futures = {version = "*", optional = true}
async-recursion = {version = "0.3", optional = true}

[dev-dependencies]
itertools = ">= 0.8"
text_io = "0.1"
tokio = "1.8"
tokio-test = "0.4"


[lib]
name = "grove"
path = "src/lib.rs"

[features]
async_union = ["futures", "async-recursion"]
bench = []
default = ["async_union"]