[package]
name = "grove"
version = "0.1.0"
authors = ["Noam Ta Shma noam.tashma@gmail.com"]
edition = "2021"
keywords = ["interval", "segment", "tree", "BST"]
categories = ["data-structures", "algorithms"]
repository = "https://github.com/noamtashma/grove"
description = "A segment tree library enabling generic user-defined queries and actions on segments of your data."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_destructure = "1.0.0"
void = "1.0"
rand = "0.8"
recursive_reference = {version = "0.*", path = "../recursive_reference" }

[dev-dependencies]
itertools = ">= 0.8"
text_io = "0.1"


[lib]
name = "grove"
path = "src/lib.rs"

[features]
bench = []